<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StyleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/logonew1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/contex_style"
                    android:layout_margin="20dp"
                    />

                //Pomade
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="1. POMADE"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                    <ImageView
                        android:layout_margin="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:srcCompat="@mipmap/pomade"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="14dp"
                        android:layout_height="match_parent"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:text="@string/pomade_caption_1"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="14dp"
                        android:text="@string/pomade_caption_2"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        />
                    <Button
                        android:id="@+id/btn_pomade"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:textColorHint="@color/colorPrimary"
                        android:text="POMADE"/>

                </LinearLayout>

                //Sisir Pomade
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="2. SISIR POMADE"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary"/>
                    <ImageView
                        android:layout_margin="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:srcCompat="@mipmap/sisir"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14dp"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:text="@string/sisir_caption1"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="14dp"
                        android:text="@string/sisir_caption2"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        />
                    <Button
                        android:id="@+id/btn_sisir"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_margin="20dp"
                        android:text="SISIR POMADE"/>
                </LinearLayout>

                //Gel Rambut
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="3. GEL RAMBUT"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary"/>
                    <ImageView
                        android:layout_margin="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:srcCompat="@mipmap/gel"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="14dp"
                        android:text="@string/gel_caption1"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="14dp"
                        android:text="@string/gel_caption2"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        />
                    <Button
                        android:id="@+id/btn_gel"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_margin="20dp"
                        android:text="GEL RAMBUT"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="4. HAIR CLIPPER"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary"/>
                    <ImageView
                        android:layout_margin="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:srcCompat="@mipmap/clipper"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14dp"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:text="@string/clipper_caption1"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14dp"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:text="@string/clipper_caption2"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        />
                    <Button
                        android:id="@+id/btn_clipper"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_margin="20dp"
                        android:text="HAIR CLIPPER"/>
                </LinearLayout>

            </LinearLayout>
    </LinearLayout>

</ScrollView>