<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/logonew1"/>

            //Barber Bronze
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:text="@string/barber_bronze"
                        android:layout_marginBottom="12dp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif" />

                    <ImageView

                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="TODO"
                        app:srcCompat="@mipmap/bronze" />

                <Button
                    android:id="@+id/btn_bronze"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/click_here_to_get_location"
                    android:textSize="10sp" />
                </LinearLayout>

            //Luxo Barber
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/luxo_barber_shop"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@mipmap/luxo" />

                <Button
                    android:id="@+id/btn_luxo"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/click_here_to_get_location"
                    android:textSize="10dp" />
            </LinearLayout>


            //Barber DPR Margonda
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/dpr_barber_shop"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@mipmap/dpr" />

                <Button
                    android:id="@+id/btn_dpr"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/click_here_to_get_location"
                    android:textSize="10dp" />
            </LinearLayout>

            //Barber Arfa
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/arfa_barber_shop"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@mipmap/arfa" />

                <Button
                    android:id="@+id/btn_arfa"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/click_here_to_get_location"
                    android:textSize="10dp" />
            </LinearLayout>

            //Barber D'Lucky Cats
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/d_lucky_cuts_barbershop"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@mipmap/dlucky" />

                <Button
                    android:id="@+id/btn_dlucky"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/click_here_to_get_location"
                    android:textSize="10dp" />
            </LinearLayout>

            //Barber Yugen
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/yugen_cuts_and_coffee"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@mipmap/yugen" />

                <Button
                    android:id="@+id/btn_yugen"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/click_here_to_get_location"
                    android:textSize="10dp" />
            </LinearLayout>

            //Barber Daniels
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/daniel_s_barbershop"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@mipmap/daniels" />

                <Button
                    android:id="@+id/btn_daniels"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/click_here_to_get_location"
                    android:textSize="10dp" />
            </LinearLayout>

            //Hairock Barber
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/hairock_barbershop"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@mipmap/hairock" />

                <Button
                    android:id="@+id/btn_hairock"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/click_here_to_get_location"
                    android:textSize="10dp" />
            </LinearLayout>



        </LinearLayout>
    </RelativeLayout>

</ScrollView>